# silver_research_bot

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GATAC_formula_reference.html  LICENSE  README.md  SECURITY.md  bug_report.md  docker-compose.yml  pyproject.toml  requirements.txt  test_bug_fix.py  公式汇总.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: README.md  agent-social-network.md  channel-plugin-guide.md  chat-apps.md  chat-commands.md  cli-reference.md  configuration.md  deployment.md  memory.md  multiple-instances.md  my-tool.md  openai-api.md  pipeline_analysis.md  python-sdk.md  quick-start.md  research-assistant.md  websocket.md  优秀项目经历.txt  后续完善分析报告.md  完善分析报告.md  改进建议报告.md  横向对比改造建议.md  简历项目描述.md  面试问答准备.md  面试问题.txt
docs/changelog/: CHANGELOG.md
silver_research_bot/: __init__.py  __main__.py  config.json  research_app.py  research_bm25.py  research_cli.py  research_core.py  research_embedder.py  research_multimodal.py  research_rag.py  research_reranker.py  research_service.py  research_vector_store.py  research_workflow.py  silver_research_bot.py  test.py
silver_research_bot/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  memory_conflict.py  memory_forgetting.py  memory_retrieval.py  memory_scorer.py  paper_team.py  role_factory.py  runner.py  skills.py  subagent.py
silver_research_bot/api/: __init__.py  server.py
silver_research_bot/bus/: __init__.py  events.py  queue.py
silver_research_bot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  qq.py  registry.py  slack.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
silver_research_bot/cli/: __init__.py  commands.py  models.py  onboard.py  stream.py
silver_research_bot/command/: __init__.py  builtin.py  router.py
silver_research_bot/config/: __init__.py  loader.py  paths.py  schema.py
silver_research_bot/cron/: __init__.py  service.py  types.py
silver_research_bot/heartbeat/: __init__.py  service.py
silver_research_bot/paper_analyzer/: __init__.py  analyzer.py  auditor.py  citation_graph.py  extractor.py  formula_explainer.py  manager.py  models.py  orchestrator.py  reproducer.py  reviewer.py  tools.py  translator.py  visualizer.py
silver_research_bot/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  github_copilot_provider.py  openai_codex_provider.py  openai_compat_provider.py  registry.py  transcription.py
silver_research_bot/security/: network.py
silver_research_bot/session/: __init__.py  manager.py
silver_research_bot/skills/: README.md
tests/: conftest.py  parse_formula_md.py  test_e2e_agent.py  test_eval.py  test_formula_eval.py
web/: index.html  package-lock.json  package.json  sw.js  vite.config.js
web/src/: App.vue  router.js  (+1 more)
(+78 files in other folders)
