[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silver-research-bot-ai"
version = "0.2.0"
description = "Autonomous AI research assistant with FastAPI backend and Vue web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "silver-research-bot contributors" }]
keywords = ["ai", "research", "agent", "rag", "fastapi", "vue"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "loguru>=0.7.2",
  "typer>=0.12.3",
  "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]
web = []

[tool.setuptools]
packages = ["silver_research_bot"]
include-package-data = true

[tool.setuptools.package-data]
"silver_research_bot" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
