[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silver-research-bot-ai"
version = "0.7.0"
description = "Autonomous AI research assistant with FastAPI backend and Vue web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "silver-research-bot contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Framework :: FastAPI",
]
keywords = [
    "ai",
    "research",
    "agent",
    "rag",
    "fastapi",
    "vue",
    "paper-analysis",
    "llm",
    "academic",
    "pdf-parsing",
    "machine-learning",
    "nlp",
    "multi-agent",
    "chatbot",
    "knowledge-graph",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "loguru>=0.7.2",
  "typer>=0.12.3",
  "aiofiles>=24.1.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]
web = []

[tool.setuptools]
packages = ["silver_research_bot"]
include-package-data = true

[tool.setuptools.package-data]
"silver_research_bot" = ["py.typed"]

[project.urls]
Homepage = "https://github.com/HKUDS/silver-research-bot"
Repository = "https://github.com/HKUDS/silver-research-bot"
Documentation = "https://silver-research-bot.wiki"
"Issue Tracker" = "https://github.com/HKUDS/silver-research-bot/issues"
Changelog = "https://github.com/HKUDS/silver-research-bot/blob/main/docs/changelog/CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "-q"
